# Multor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py
Multor/: CMakeLists.txt
Multor/src/: Camera.h  Configure.h  Entity.cpp  Entity.h  FilesTools.cpp  FilesTools.h  ImageLoader.cpp  ImageLoader.h  Logger.cpp  Logger.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Node.h  RenderEngine.cpp  RenderEngine.h  Shader.cpp  Shader.h  Time.cpp  Time.h  Transformation.cpp  Transformation.h  VkBufferFactory.cpp  VkBufferFactory.h  VkCommandExecuter.cpp  VkCommandExecuter.h  VkFrameChain.cpp  VkFrameChain.h  VkGeneralOptions.cpp  VkGeneralOptions.h  VkShader.cpp  VkShader.h  VkShaderFactory.cpp  VkShaderFactory.h  VkSync.cpp  VkSync.h  VkTexture.cpp  VkTexture.h  VulkanObjects.cpp  (+6 more)
VulkanEngine/: CMakeLists.txt
VulkanEngine/src/: Camera.h  Entity.cpp  Entity.h  FilesTools.cpp  FilesTools.h  ImageLoader.cpp  ImageLoader.h  Logger.cpp  Logger.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  RenderEngine.cpp  RenderEngine.h  Shader.cpp  Shader.h  Time.cpp  Time.h  Transformation.cpp  Transformation.h  VkBufferFactory.cpp  VkBufferFactory.h  VkCommandExecuter.cpp  VkCommandExecuter.h  VkFrameChain.cpp  VkFrameChain.h  VkGeneralOptions.cpp  VkGeneralOptions.h  VkShader.cpp  VkShader.h  VkShaderFactory.cpp  VkShaderFactory.h  VkSync.cpp  VkSync.h  VkTexture.cpp  VkTexture.h  VulkanObjects.cpp  (+6 more)
config/: TemplateVk_layer_settings.txt  config.toml  vk_layer_settings.txt
dependencies/: CMakeLists.txt
dependencies/sqlite/: CMakeLists.txt  fileio.c  test_windirent.c  test_windirent.h
dependencies/stb/: CMakeLists.txt  stbi_DDS_aug_c.h
shaders/: Base.frag  Base.vs  ShadowDirectional.frag  ShadowDirectional.vs  shader.frag  shader.vs
src/: CMakeLists.txt  Camera.h  Configure.h  Entity.cpp  Entity.h  RenderEngine.cpp  RenderEngine.h  Transformation.cpp  Transformation.h  application.cpp  application.h  main.cpp  model.cpp  model.h  scene.cpp  scene.h
src/gui/: CMakeLists.txt  Window.cpp  Window.h  imgui_overlay.cpp  imgui_overlay.h
src/loaders/: scene_loader.cpp  scene_loader.h
src/logger/: logger.cpp  logger.h
src/scene_objects/: Mesh.cpp  Mesh.h  Node.cpp  Node.h  light.cpp  light.h  light_manager.cpp  light_manager.h  material.cpp  material.h  shader.cpp  shader.h  shadow.cpp  shadow.h  texture.cpp  texture.h  vertex.h  vertexes.cpp  vertexes.h
src/utils/: Logger.cpp  Logger.h  Time.cpp  Time.h  files_tools.cpp  files_tools.h  image.cpp  image.h  image_loader.cpp  image_loader.h
src/vulkan/: CMakeLists.txt  VkFrameChain.h  VkGeneralOptions.cpp  VkGeneralOptions.h  VkShader.cpp  VkShader.h  VulkanRenderer.cpp  VulkanRenderer.h  buffer_factory.cpp  buffer_factory.h  command_executer.cpp  command_executer.h  frame_chain.cpp  frame_chain.h  general_options.cpp  general_options.h  mesh.h  mesh_factory.cpp  mesh_factory.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shader_factory.cpp  shader_factory.h  shadow_pass.cpp  shadow_pass.h  shadow_renderer.cpp  shadow_renderer.h  shadow_resources.cpp  shadow_resources.h  syncer.cpp  syncer.h  texture_factory.cpp  texture_factory.h  vk_buffer_factory.cpp  vk_buffer_factory.h  vk_command_executer.cpp  vk_command_executer.h  vk_mesh.h  (+8 more)
src/vulkan/objects/: buffer.h  texture.cpp  texture.h  vertex.h  vertex_buffer.h  vk_buffer.h  vk_texture.cpp  vk_texture.h  vk_vertex.h  vk_vertex_buffer.h
src/vulkan/structures/: light_ubo.cpp  light_ubo.h  shadow_ubo.cpp  shadow_ubo.h  transform_ubo.cpp  transform_ubo.h
